fix spacing on forms

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -25,6 +25,6 @@ input[type="submit"] {
   margin: 15px 0px;
 }
 
-.select2-container {
+.autocomplete {
   margin-bottom: .75rem;
 }
